@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class TestType {
  -code
  -description
  -collectingMethod
}

class Company {
  -designation
}

class Test {
}

class Administrator {
  -employeeID
  -organizationRole
  -name
  -address
  -phoneNumber
  -eMail
  -standardOcupationalClassificationCode
}

class ParameterCategory {
  -name
  -code
}
Company "1" -- "*" TestType : conducts >
Company "1" -- "*" ParameterCategory : defines >
Test "*" -- "1" TestType : is of >
Company "1" -- "*" Test : performs >
TestType "*" -- "1" Administrator : created by >
TestType "*" -- "1..*" ParameterCategory : have >
@enduml